# asyncapi-contracts

./: README.md  pyproject.toml
examples/demo_project/: README.md  asyncapi.json  example_client.py  pyproject.toml
examples/demo_project/src/demo/: app.py
examples/demo_project/src/demo/components/: my_consumer.py  my_operation.py
examples/demo_project/src/demo/contract/: my_app.py  my_endpoint.py
examples/demo_project/src/demo/domain/: __init__.py  my_consumer.py  my_endpoint.py  my_operation.py  my_producer.py
examples/demo_project/src/demo/infra/: server.py
examples/demo_project/src/demo/requestor/: example.py
examples/demo_project/src/demo/server/: main.py
examples/demo_project/tests/: test_consumer_implementation.py  test_endpoint_implementation.py  test_producer.py
src/contracts/: __init__.py  address.py  api.py  application.py  client.py  event.py  instance.py  message.py  operation.py  parameters.py  schema.py  server.py  testing.py  types.py
src/contracts/abc/: client.py  consumer.py  event.py  event_message.py  operation.py  request.py  server.py
src/contracts/asyncapi/: __init__.py  builder.py  renderer.py  specification.py
src/contracts/asyncapi/static/: asyncapi-web-component.js
src/contracts/backends/micro/: __init__.py  (+1 more)
src/contracts/core/: address.py  application_info.py  event_spec.py  exception_formatter.py  operation_spec.py  schema.py  types.py
src/contracts/interfaces/: client.py  server.py
src/contracts/specification/: asyncapi.py  builder.py  renderer.py
src/contracts/validation/: interface.py  pydantic_v1.py
(+8 files in other folders)
