[project]
name = "asyncapi-contracts"
version = "0.1.0"
description = "Contract driven development of Async API applications in Python"
authors = [
    { name = "Guillaume Charbonnier", email = "guillaume.charbonnier@araymond.com" }
]
dependencies = [
    "nats-micro",
    "typing_extensions",
    "pydantic>=1",
    "uvicorn",
    "starlette",
]

readme = "README.md"
requires-python = ">= 3.8"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/contracts"]
