#syntax=gucharbon/microb
[project]
name = "example-asyncapi"
authors = [
    { name = "Guillaume Charbonnier", email = "guillaume.charbonnier@araymond.com" },
]
requires-python = ">=3.8,<4.0"
dynamic = ["version"]
dependencies = [
    "asyncapi-contracts==0.0.2.dev0",
    "nats-micro",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = { attr = "demo.__about__.__version__" }

[tool.microb.target.default]
entrypoint = ["micro", "run", "demo.infra:setup"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
